2013-11-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/bags.spad.pamphlet,
	src/algebra/aggcat.spad.pamphlet: Implement missing functions
	in Dequeue.
	src/algebra/mset.spad.pamphlet: Remove unused 'bag'.

2013-11-16  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/etc/fricas: remove SPAD variable

2013-11-16  Ralf Hemmecke  <ralf@hemmecke.org>

	* Makefile.in, src/etc/fricas, src/interp/i-syscmd.boot: find
	aldor at startup

2013-11-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/bags.spad.pamphlet,
	src/algebra/aggcat.spad.pamphlet,
	src/algebra/lmdict.spad.pamphlet,
	src/algebra/array1.spad.pamphlet,
	src/input/bags.input: Fix ArrayStack.

2013-11-15  Peter Broadbery <p.broadbery@gmail.com>

	* src/interp/hashcode.boot, src/interp/foam_l.lisp: Sync with
	aldor hash function. Note that this change makes older versions of
	aldor incompatible with this code.

2013-11-15  Peter Broadbery <p.broadbery@gmail.com>

	* src/interp/interop.boot: Don't try to evaluate conditions on
	categories where the category is already unconditionally part of a
	category's parents.

2013-11-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-opt.boot: Use different symbols for labels
	and values.

2013-10-12  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/aldor/Makefile.in: make clean now does not remove cliques.as

2013-09-30  Raoul Bourquin <raoulb@bluewin.ch>

	* src/algebra/combfunc.spad.pamphlet: Evaluate the lambertW
	function for the special value at -1/e.

2013-09-27  Ralf Hemmecke  <ralf@hemmecke.org>
	* src/aldor/Makefile.in, src/aldor/Makefile3.in,
	configure.ac: Update for free Aldor.
	src/aldor/aldor: Add needed files from Aldor distribution.

2013-09-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in, src/interp/Makefile.in,
	src/doc/Makefile.in, src/etc/Makefile.in: Makefile fixes.
	src/scripts/mkdist.sh: Update.

2013-09-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot, src/interp/scwrap2.boot: