@@ -1486,12 +1486,20 @@ UnaryRecursiveAggregate(S : Type) : Category == RecursiveAggregate S with
         ++ the head of the cycle, \axiom{cycleSplit!(w)} will drop v off w thus
         ++ destructively changing w to u, and returning v.
       setfirst! : (%, S) -> S
-        ++ setfirst!(u, x) destructively changes the first element of a to x.
+        ++ setfirst!(u, x) destructively changes the first element of u to x.
+        ++ Error if u is empty.
+      qsetfirst! : (%, S) -> S
+        ++ setfirst!(u, x) destructively changes the first element of u to x
+        ++ without checking for errors.
       setelt : (%,"first",S) -> S
         ++ setelt(u,"first",x) (also written: \axiom{u.first := x}) is
         ++ equivalent to \axiom{setfirst!(u, x)}.
       setrest! : (%, %) -> %
         ++ setrest!(u, v) destructively changes the rest of u to v.
+        ++ Error if u is empty.
+      qsetrest! : (%, %) -> %
+        ++ setrest!(u, v) destructively changes the rest of u to v
+        ++ without checking for errors.
       setelt : (%,"rest",%) -> %
         ++ setelt(u,"rest",v) (also written: \axiom{u.rest := v}) is equivalent to
         ++ \axiom{setrest!(u, v)}.
