@@ -51,6 +51,8 @@ IndexedList(S : Type, mn : Integer) : Exports == Implementation where
  Qeq     ==> EQ$Lisp
  Qcons   ==> CONS$Lisp
  Qpush   ==> PUSH$Lisp
+ Qset_first ==> qset_first$Lisp
+ Qset_rest ==> qset_rest$Lisp
 
  Exports ==> ListAggregate S
  Implementation ==>
@@ -67,12 +69,14 @@ IndexedList(S : Type, mn : Integer) : Exports == Implementation where
    setfirst!(x, s)     ==
       empty? x => error "Cannot update an empty list"
       Qfirst RPLACA(x, s)$Lisp
+   qsetfirst!(x, s)    == Qset_first(x, s)
    setelt(x,"first",s) ==
       empty? x => error "Cannot update an empty list"
       Qfirst RPLACA(x, s)$Lisp
    setrest!(x, y)      ==
       empty? x => error "Cannot update an empty list"
       Qrest RPLACD(x, y)$Lisp
+   qsetrest!(x, y)     == Qset_rest(x, y)
    setelt(x,"rest",y)  ==
       empty? x => error "Cannot update an empty list"
       Qrest RPLACD(x, y)$Lisp
