@@ -1,3 +1,9 @@
+2013-11-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/aggcat.spad.pamphlet,
+	src/algebra/list.spad.pamphlet: Add 'qsetfirst!' and 'qsetrest!'.
+	src/lisp/primitives.lisp: Add 'qset_first' and 'qset_rest'.
+
 2013-11-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/bags.spad.pamphlet,
